--- a/src/App.css
+++ b/src/App.css
@@ -251,3 +251,89 @@ color: rgba(255, 255, 255, 0.5);
 left: 485px;
 }
 
+
+.Library .Star_div{
+position: absolute;
+width: 65px;
+height: 65px;
+background: linear-gradient(180deg, #3A3A3A 0%, rgba(58, 58, 58, 0) 100%);
+border-radius: 8px;
+display: flex;
+left: 48px;
+align-items: center;
+justify-items: center;
+top: 50px;
+}
+
+.Library .Star1 {
+position: absolute;
+left: 15px;
+width: 35px;
+height: 35px;
+border-radius: 1px;
+}
+
+.Folder img {
+position: absolute;
+width: 23px;
+height: 23px;
+left: 38px;
+top: 7px;
+
+}
+
+.Folder h1 {
+position: absolute;
+left: 71px;
+right: 91.88%;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 100%;
+display: flex;
+align-items: center;
+text-align: center;
+color: #D1D1D1;
+}
+
+
+.Like h2 {
+  position: absolute;
+  left: 140px;
+  right: 85.62%;
+  top: 60px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13.5px;
+  line-height: 100%; 
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  white-space: nowrap;
+}
+
+.Like p {
+  position: absolute;
+left: 140px;
+top: 80px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 12.5px;
+line-height: 100%;
+display: flex;
+align-items: center;
+color: rgba(255, 255, 255, 0.5);
+}
+
+.Like li {
+  position: absolute;
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 12.5px;
+padding-left: 10px; 
+color: rgba(255, 255, 255, 0.5);
+}
